Significant refactoring and bug fixes